<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Final Project</string>
    <string name="enter_city_name">Enter City Name</string>
    <string name="radius">Radius</string>
    <string name="search">Search</string>
    <string name="name">Name</string>
    <string name="starting_date">Starting Date</string>
    <string name="price_range">Price Range</string>
    <string name="url">URL</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="main_details"><![CDATA[Here you can enter any name of city & radius that you want to search events and click on search to get desired details]]></string>
    <string name="main_toolbar_title">Search Nearby Events</string>
    <string name="favorite">Favorite Events</string>
    <string name="help">Help</string>
    <string name="details_toolbar_title">Event Details</string>


    <string name="covidCountry">Country</string>
    <string name="covidCountryEditText">Enter a country name...</string>
    <string name="covidDate">Date</string>
    <string name="covidDateEditText">Please select a date...</string>
    <string name="covidSearchBtn">Search</string>
    <string name="covidAuthor">Author: Hamzeh</string>
    <string name="covidVersion">Version 1.0</string>
    <string name="covidAppTitle">COVID-19 Case Data</string>
    <string name="sortSwitch">Sort by # of cases</string>
    <string name="covidSearchResults">Search Results</string>
    <string name="covidSort">The list has been sorted</string>
    <string name="covidUnsort">The list is not sorted</string>
    <string name="covidSavedResults">Saved Search Results</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="covidHide">Hide</string>
    <string name="covidMessageHere">Details</string>
    <string name="covidLocationDetails">Location Details</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="covidHelpMain">Enter a country and a pick a date to see updated statistics on that particular day.</string>
    <string name="covidHelpTitle">Help</string>
    <string name="covidHelpResults">This page shows updated statistics of the selected country, on the day selected. \n\nTo sort the results, tick the checkbox.\n\nTo view details about the location, click an item. \n\nTo delete an item from the database, click and hold an item and follow the dialog.</string>
    <string name="covidGoBackToHome">GO BACK TO HOME</string>
    <string name="covidSaveSearch">SAVE SEARCH RESULTS</string>
    <string name="covidLoadResults">LOAD SEARCH RESULTS</string>
    <string name="covidHelpMenuItem">HELP</string>

    <string name="ingredients"><u>Ingredients</u></string>
    <string name="recipeButtonText">Go to Recipe</string>
    <string name="savedRecipes">Saved Recipes</string>
    <string name="longPressHint"><i>Long Press to Delete</i></string>

    <string name="covid_toolbar_icon">Covid Search</string>
    <string name="tm_toolbar_icon">Ticket Master</string>
    <string name="recipe_toolbar_icon1">Recipe Search</string>
    <string name="recipe_toolbar_icon2">Recipe Search 2</string>
    <string name="to_home_page">Home</string>
    <string name="recipe_search_toolbar_title">Recipe Search</string>
    <string name="recipe_search_toolbar_subtitle">Cal Malouin - V1</string>
    <string name="toast_dialog_no_results">No Results</string>
    <string name="alert_dialog_recipe_search_help_text">Enter the name of a dish in the search box to find associated recipes.\n\nClick on a recipe to get more information.</string>
    <string name="alert_dialog_okay_button">Okay</string>
    <string name="recipe_page_toolbar_title">Recipe Information</string>
    <string name="snackbar_dialog_undo_button">Undo</string>
    <string name="snackbar_dialog_save_text">Recipe Saved</string>
    <string name="alert_dialog_recipe_page_help_text">Click on the \'Go to Recipe\' button for more information on this recipe.\n\nClick the floppy disk icon in the top right to save this recipe for later.</string>
    <string name="toast_dialog_no_saves">No Saved Recipes</string>
    <string name="toast_dialog_delete_save_text">Would you like to delete this saved recipe?</string>
    <string name="toast_dialog_delete_save_text_yes">Yes</string>
    <string name="toast_dialog_delete_save_text_no">No</string>
    <string name="toast_dialog_delete_save_text_title">Delete Recipe</string>
    <string name="choose_which_app_to_launch">Choose which app you would like to launch.</string>
    <string name="recipe_db_import">Import</string>
    <string name="recipe_db_export">Export</string>
    <string name="toast_dialog_import_from_db">Importing Saved Recipes</string>
    <string name="toast_dialog_export_to_db">Exporting Saved Recipes</string>

    <string name="searchForRecipeTextView">Search for a recipe:</string>
    <string name="searchHintText">Search</string>
    <string name="titleTextView">Title:</string>
    <string name="ingredientsTextView">Ingredients:</string>
    <string name="URLTextView">URL:</string>
    <string name="saveRecipeButton">Save Recipe</string>
    <string name="searchButton">SEARCH</string>
    <string name="savedRecipesButton">Saved Recipes</string>
    <string name="backToSearchButton">Back to search</string>
    <string name="enterTextToast">Please enter some text!</string>
    <string name="recipeSavedToast">Recipe saved!</string>
    <string name="recipeAlreadySavedToast">Recipe is already saved!</string>
    <string name="activityHelpTitle">Help With This Page</string>
    <string name="alertOK">OK</string>
    <string name="savedRecipesHelpMessage">This is where you can view recipes after you have clicked the \'Save Recipe\' button on any recipe.</string>
    <string name="mainActivityHelpMessage">Please enter a recipe or an ingredient, then click the \'Search\' button to view results.</string>
    <string name="recipeListHelpMessage">Please click on any recipe from the list to view details.</string>
    <string name="recipeDetailsHelpMessage">This is where you can see the ingredients and the URL of the recipe you selected. Recipes can be saved by clicking the \'Save Recipe\' button. The URL can be clicked to open the website. Click the \'Back to Search\' button to search for something else.</string>
    <string name="launchURLToast">Launching URL…</string>
</resources>