<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_help_main"
        android:orderInCategory="100"
        android:icon="@drawable/help_main_page_white"
        android:title="@string/help"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_covid_toolbar_button"
        android:orderInCategory="1"
        android:title="@string/covid_toolbar_icon"
        android:icon="@drawable/covid_search_toolbar_icon"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_tm_toolbar_button"
        android:orderInCategory="2"
        android:title="@string/tm_toolbar_icon"
        android:icon="@drawable/ticket_master_toolbar_icon"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_recipe_toolbar_icon1"
        android:orderInCategory="3"
        android:title="@string/recipe_toolbar_icon1"
        android:icon="@drawable/recipe_search_toolbar_icon1"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_recipe_toolbar_icon2"
        android:orderInCategory="4"
        android:title="@string/recipe_toolbar_icon2"
        android:icon="@drawable/recipe_search_toolbar_icon2"
        app:showAsAction="always" />

</menu>