<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item android:id="@+id/GoBackToHome"
        android:icon="@drawable/home"
        android:orderInCategory="1"
        app:showAsAction="always"
        android:title="@string/covidGoBackToHome"/>

    <item android:id="@+id/covidSaveData"
        android:icon="@drawable/save"
        android:orderInCategory="2"
        app:showAsAction="always"
        android:title="@string/covidSaveSearch"/>

    <item android:id="@+id/covidLoadData"
        android:icon="@drawable/load"
        android:orderInCategory="3"
        app:showAsAction="always"
        android:title="@string/covidLoadResults"/>

    <item android:id="@+id/covidHelpSearch"
        android:icon="@drawable/covidhelp"
        app:showAsAction="never"
        android:title="@string/covidHelpMenuItem"/>

</menu>