<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_above="@id/covidAuthor"
        android:id="@+id/covidAppTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/covidAppTitle"/>

    <TextView
        android:layout_above="@id/covidVersion"
        android:id="@+id/covidAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/covidAuthor"/>

    <TextView
        android:layout_alignParentBottom="true"
        android:id="@+id/covidVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/covidVersion"/>

</LinearLayout>