<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecipeSearchActivity">

    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/searchArtistTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searchForRecipeTextView"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/searchRecipeEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/searchArtistTextView"
        android:layout_alignEnd="@+id/searchArtistTextView"
        android:layout_marginTop="25dp"
        android:hint="@string/searchHintText"
        android:inputType="text" />

    <Button
        android:id="@+id/searchRecipeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/searchRecipeEditText"
        android:text="@string/searchButton" />

    <Button
        android:id="@+id/savedRecipesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/savedRecipesButton" />

    <ImageButton
        android:id="@+id/mainHelpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="?android:selectableItemBackground"
        android:padding="2dp"
        android:src="@drawable/help" />

</RelativeLayout>