<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CovidMain">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/covid_drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:openDrawer="start" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/covidCountryTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/covidCountry"/>

            <!-- REQUIREMENT #3 Each Activity must have atleast 1 edit text !-->
            <EditText
                android:layout_below="@id/covidCountryTextView"
                android:id="@+id/covidCountryEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:hint="@string/covidCountryEditText"/>

            <TextView
                android:layout_below="@id/covidCountryEditText"
                android:id="@+id/covidDateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/covidDate"/>

            <EditText
                android:layout_below="@id/covidDateTextView"
                android:id="@+id/covidDateEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:hint="@string/covidDateEditText"/>

            <Button
                android:layout_below="@id/covidDateEditText"
                android:id="@+id/covidSearchBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/covidSearchBtn" />


        </RelativeLayout>

        <com.google.android.material.navigation.NavigationView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:headerLayout="@layout/covid_header_layout"
            app:menu="@menu/covid_home_menu"
            android:id="@+id/nav_view" />



    </androidx.drawerlayout.widget.DrawerLayout>


</LinearLayout>