<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/detailLayout"
    tools:context=".TMDetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <ImageView
        android:id="@+id/iv_event_banner"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/toolbar"
        android:scaleType="fitXY"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_event_banner"
        android:layout_alignParentStart="true"
        android:layout_margin="10dp"
        android:text="@string/name" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_event_banner"
        android:layout_alignBottom="@+id/textView"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="0dp"
        android:layout_toEndOf="@+id/textView"
        android:text="TextView" />

    <TextView
        android:id="@+id/tv_label_starting_date"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_margin="10dp"
        android:text="@string/starting_date" />

    <TextView
        android:id="@+id/tv_starting_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tv_label_starting_date"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_toEndOf="@+id/tv_label_starting_date"
        android:text="TextView" />

    <TextView
        android:id="@+id/tv_label_price_range"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_label_starting_date"
        android:layout_alignParentStart="true"
        android:layout_margin="10dp"
        android:text="@string/price_range" />

    <TextView
        android:id="@+id/tv_price_range"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tv_label_price_range"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_toEndOf="@+id/tv_label_price_range"
        android:text="TextView" />

    <TextView
        android:id="@+id/tv_label_url"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_label_price_range"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_margin="10dp"
        android:text="@string/url" />

    <TextView
        android:id="@+id/tv_URL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_price_range"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_toEndOf="@+id/tv_label_url"
        android:text="TextView" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_URL"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp"
        android:text="@string/save" />

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_save"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp"
        android:text="@string/delete"
        />
</RelativeLayout>